fix: WC popup, checkbox, session alignment (#2636)
* fix: WC popup, checkbox, DApp name alignment

* fix: add gap + remove import

* fix: centralise error

--- a/src/components/walletconnect/SessionList/styles.module.css
+++ b/src/components/walletconnect/SessionList/styles.module.css
@@ -1,12 +1,21 @@
 .sessionList {
   width: 100%;
   padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-1);
 }
 
 .sessionListItem {
   border: 1px solid var(--color-border-light);
   border-radius: 6px;
   height: 56px;
+}
+
+.sessionListAvatar {
+  display: flex;
+  min-width: unset;
+  padding-right: var(--space-1);
 }
 
 .sessionListSecondaryAction {
